<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="8dip"
              android:layout_margin="5dip"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/create_task"
                  android:layout_margin="16dip"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:id="@+id/headingLabel"
                  android:layout_weight="0.8"
                />

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:onClick="deleteTask"
                android:id="@+id/deleteButton"
                android:layout_weight="0.2"
                android:layout_gravity="center_vertical|right"
                android:visibility="gone"
                />
    </LinearLayout>


    <TextView android:layout_width="wrap_content"
              android:text="@string/title"
              android:textSize="16sp"
              android:gravity="center_vertical|right"
              android:layout_margin="5dip"
              android:layout_height="wrap_content"
            />
    <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:layout_margin="5dip"
            android:id="@+id/titleEdit"
            android:inputType="text"
            android:hint="@string/title_hint"
            />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:text="@string/description"
              android:layout_margin="5dip"

            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:layout_margin="5dip"
              android:singleLine="false"
              android:id="@+id/descriptionEdit"
              android:inputType="text"
              android:hint="@string/description_hint"
            />

    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveTask"
            android:id="@+id/saveButton"
            />

</LinearLayout>